--- a/css/theme.css
+++ b/css/theme.css
@@ -1,3 +1,4 @@
+@media(max-width: 960px) and (min-width: 786px){
 #divA{
   background-color: #fec5bb;
 }
@@ -34,3 +35,44 @@
 #divI{
   background-color: #fec89a;
 }
+}
+
+
+@media(max-width: 767px) and (min-width: 480px){
+  #divA{
+    background-color: #dfd2cf;
+  }
+  #divB{
+    background-color: #cab9b6;
+  }
+  
+  #divC{
+    background-color: #d3c2c0;
+  }
+  
+  #divD{
+    background-color: #cfcfcc;
+  }
+  
+  
+  #divE{
+    background-color: #767c78;
+  }
+  
+  #divF{
+    background-color: #b4aea7;
+  }
+  
+  #divG{
+    background-color: #cec0b9;
+  }
+  
+  
+  #divH{
+    background-color: #f7ebe2;
+  }
+  
+  #divI{
+    background-color: #726e6b;
+  }
+  }
