--- a/css/base.css
+++ b/css/base.css
@@ -1,13 +1,30 @@
 *{
   box-sizing: border-box;
 }
+
+body{
+  margin:   auto;
+  width: 100%;
+  height: 100%;
+}
+
+@media all and (min-width:768px)and (max-width:960px){
+  *{
+    box-sizing: border-box;
+  }
 body{
   margin: auto;
-  width: 960px;
-  height: 768;
+  width: 100%;
+  height: 100%;
 }
 
 div{
 justify-content: center;
 text-align: center;
 }
+}
+
+div{
+  justify-content: center;
+  text-align: center;
+  }
