--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,108 @@
+@media(max-width: 767px) and (min-width: 480px){
+#divA{
+  width: 480px;
+  height: 75px;
+  line-height: 75px;
+
+  border: black solid 1px;
+}
+
+#divB {
+  width: 480px;
+  height: 150px;
+  line-height: 150px;
+  border-left: black solid 1px;
+  border-right:black solid 1px ;
+}
+
+#divC {
+  width: 480px;
+  height: 125px;
+  line-height: 125px;
+
+  border: black solid 1px;
+  
+   border-bottom: 0px;  
+
+}
+
+#divD {
+  width: 480px;
+  height: 125px;
+  line-height: 125px;
+
+  border: black solid 1px;
+  border-bottom:0 ;
+  
+
+}
+
+#divE {
+  width: 240px;
+  height: 250px;
+  line-height: 250px;
+
+  border: black solid 1px;
+  border-bottom: 0px;  
+  border-bottom:0 ;
+  border-right: 0;
+  
+
+
+}
+
+#divF {
+  width: 240px;
+  height: 250px;
+  line-height: 250px;
+
+  border: black solid 1px;
+  border-bottom:0 ;
+
+  
+}
+
+#divG {
+  width: 240px;
+  height: 250px;
+  line-height: 250px;
+
+  border: black solid 1px;
+ 
+  border-right: 0;
+}
+#divH {
+  width: 240px;
+  height: 250px;
+  line-height: 250px;
+  border: black solid 1px;
+  
+}
+
+#divI {
+  width: 480px;
+  height: 80px;
+  line-height: 80px;
+  border: black solid 1px;
+  float: left;
+  border-top:0 ;
+
+ 
+}
+.left{
+  float:left; width:50%;
+}
+
+.left1{
+  float:left; width:50%;
+}
+
+
+}
+
+
+
+@media(max-width: 960px) and (min-width: 786px){
 #divA{
   width: 960px;
   height: 100px;
@@ -97,4 +202,5 @@
   bottom: 1550px;
   left: 200px;
   border-top: 0;
+}
 }
