--- a/css/base.css
+++ b/css/base.css
@@ -4,8 +4,8 @@
 
 body{
   margin:   auto;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
 }
 
 @media all and (min-width:768px)and (max-width:960px){
@@ -14,8 +14,8 @@ body{
   }
 body{
   margin: auto;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
 }
 
 div{
