--- a/css/base.css
+++ b/css/base.css
@@ -8,10 +8,10 @@ body{
   height: 100%; */
 }
 
-@media all and (min-width:768px)and (max-width:960px){
+/* @media all and (min-width:768px)and (max-width:960px){
   *{
     box-sizing: border-box;
-  }
+  } */
 body{
   margin: auto;
   /* width: 100%;
@@ -22,7 +22,7 @@ div{
 justify-content: center;
 text-align: center;
 }
-}
+
 
 div{
   justify-content: center;
