--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,4 @@
-@media ( max-width: 767px) and ( min-width: 480px){
+@media screen and ( max-width: 767px)  and ( min-width: 480px){
 
   body{
     width: 480px;
@@ -120,7 +120,7 @@
 
 
 
-@media(min-width: 960px) {
+@media screen and (min-width: 960px) {
 body{
   width: 960px;
 }
@@ -244,21 +244,24 @@ body{
 
 
 
-/* @media(min-width: 768) {
+@media only screen and (min-width: 768px) and (max-width:959px)
+{
   body{
     width: 768px;
+    margin: auto;
+    text-align: center;
   }
     .container{
       width: 768px;
       display: grid;
-      grid-template-rows: 100px 200px 250px 150px;
+      grid-template-rows:  100px 200px 250px 150px ;
       grid-template-columns: repeat(5);
       border: 0px;
     }
   #divA{
     grid-row: 1/2;
     grid-column: 1/6;
-    width: 960px;
+    width: 768px;
     height: 100px;
     line-height: 100px;
   
@@ -269,8 +272,8 @@ body{
     grid-row: 2/5;
     grid-column: 1/2;
   
-    width: 200.01px;
-    height: 600.01px;
+    width: 200px;
+    height: 600px;
     line-height: 600px;
     border-left: black solid 1px;
     border-bottom:black solid 1px ;
@@ -280,7 +283,7 @@ body{
     grid-row: 2/3;
     grid-column: 2/4;
   
-    width: 380px;
+    width: 284px;
     height: 200px;
     line-height: 200px;
   
@@ -292,7 +295,7 @@ body{
   }
   
   #divD {
-    width: 380px;
+    width: 284px;
     height: 200px;
     line-height: 200px;
   
@@ -307,7 +310,7 @@ body{
   #divE {
     grid-row: 3/4;
     grid-column: 2/3;
-    width: 190px;
+    width: 142px;
     height: 250px;
     line-height: 250px;
   
@@ -318,7 +321,7 @@ body{
   #divF {
     grid-row: 3/4;
     grid-column: 3/4;
-    width: 190px;
+    width: 142px;
     height: 250px;
     line-height: 250px;
   
@@ -331,7 +334,7 @@ body{
   #divG {
     grid-row: 3/4;
     grid-column: 4/5;
-    width: 190px;
+    width: 142px;
     height: 250px;
     line-height: 250px;
   
@@ -342,18 +345,18 @@ body{
   #divH {
     grid-row: 3/4;
     grid-column: 5/6;
-    width: 190px;
+    width: 142px;
     height: 250px;
     line-height: 250px;
     position: relative;
-    right: 190px;
+    right: 142px;
     border: black solid 1px;
   }
   
   #divI {
     grid-row: 4/5;
     grid-column: 2/6;
-    width: 760px;
+    width: 568px;
     height: 150px;
     line-height: 150px;
      border: black solid 1px;
@@ -364,4 +367,4 @@ body{
    
   
   
-  } */
+  }
