--- a/css/theme.css
+++ b/css/theme.css
@@ -76,3 +76,44 @@
     background-color: #726e6b;
   }
   }
+
+
+  @media only screen and (min-width: 768px) and (max-width:959px)
+{
+  #divA{
+    background-color: #ffcbf2;
+  }
+  #divB{
+    background-color: #f3c4fb;
+  }
+  
+  #divC{
+    background-color: #ecbcfd;
+  }
+  
+  #divD{
+    background-color: #e5b3fe;
+  }
+  
+  
+  #divE{
+    background-color: #e2afff;
+  }
+  
+  #divF{
+    background-color: #deaaff;
+  }
+  
+  #divG{
+    background-color: #d8bbff;
+  }
+  
+  
+  #divH{
+    background-color: #c8e7ff;
+  }
+  
+  #divI{
+    background-color: #c0fdff;
+  }
+}
